--- a/package.json
+++ b/package.json
@@ -56,5 +56,5 @@
     "url": "https://github.com/DarkWinzo/Bosco-MD/issues"
   },
   "homepage": "https://github.com/DarkWinzo/Bosco-MD#readme",
-  "license": "ISC"
+  "license": "MIT"
 }
