--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "Bosco-MD",
   "description": "Bosco-MD whatsapp bot made by @DarkWinzo with baileys",
   "repository": "https://github.com/DarkWinzo/Bosco-MD",
-  "logo": "https://telegra.ph/file/f40d0ef77439f516c050f.jpg",
+  "logo": "https://i.ibb.co/Nxd36B3/Dark-Winzo.jpg",
   "keywords": ["bosco", "nodejs", "bot", "whatsapp bot", "DarkWinzo"],
   "buildpacks": [
     {
